# cuems-audioplayer

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  MTC_AUTOMATED_TEST.py  MTC_INTEGRATION_TEST.sh  MTC_STRESS_TEST.py  Makefile  README.md  TEST_COVERAGE.md  audiofstream.cpp  audiofstream.h  audiofstream_class.cpp  audiofstream_class.h  audioplayer.cpp  audioplayer.h  audioplayer_class.cpp  audioplayer_class.h  commandlineparser_class.cpp  commandlineparser_class.h  cuems_errors.h  download_test_videos.sh  generate_test_files.sh  generate_test_videos.sh  main.cpp  main.h  sysq_errors.h  sysqlogger_class.cpp  sysqlogger_class.h
cmake/: distclean.cmake
debian/: README.Debian  changelog  control  copyright  rules
debian/man/: audioplayer-cuems.1  cuems-audioplayer.1
debian/patches/: makefile-add-distclean  series
src/: CMakeLists.txt  audiofstream.cpp  audiofstream.h  audioplayer.cpp  audioplayer.h  commandlineparser.cpp  commandlineparser.h  cuems_audioplayerConfig.h.in  cuems_errors.h  main.cpp  main.h
src/cuemslogger/: CMakeLists.txt  README.md  cuemslogger.cpp  cuemslogger.h
src/mtcreceiver/: CMakeLists.txt  README.md  mtcreceiver.cpp  mtcreceiver.h
src/oscreceiver/: CMakeLists.txt  README.md  oscreceiver.cpp  oscreceiver.h
test/: CMakeLists.txt  README.md  main_functions.cpp  run_tests.sh  test.bash  test_audiofstream.cpp  test_audioplayer.cpp  test_commandlineparser.cpp  test_main.cpp
